--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
             sudo docker pull lakhandev/fast-funds:latest
             sudo docker stop web-app || true
             sudo docker rm web-app || true
-            sudo docker run -e DATABASE_URL=${{ secrets.DB_URL }} --restart=always -d --name web-app -p 3005:3000 lakhandev/fast-funds:latest
+            sudo docker run -e DATABASE_URL=${{ secrets.DB_URL }} -e NEXTAUTH_URL=https://fastfunds.jonathanfwa.tech/ --restart=always -d --name web-app -p 3005:3000 lakhandev/fast-funds:latest
